--- a/app/src/main/res/layout/activity_wall.xml
+++ b/app/src/main/res/layout/activity_wall.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/wall_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/wall_root"
     tools:context=".activities.WallActivity">
 
     <ProgressBar
@@ -89,13 +89,12 @@
         android:textColor="@color/textColor" />
 
     <LinearLayout
-        android:backgroundTint="@color/sheetCol"
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/sheet"
-        android:elevation="10dp"
+        android:backgroundTint="@color/sheetCol"
         android:orientation="vertical"
         android:visibility="gone">
 
@@ -206,6 +205,7 @@
                     android:layout_marginBottom="6dp"
                     android:background="@color/grey" />
 
+
                 <TextView
                     android:id="@+id/upvotes"
                     android:layout_width="wrap_content"
@@ -215,7 +215,29 @@
                     android:layout_marginEnd="28dp"
                     android:text="Upvotes: "
                     android:textColor="@color/secondary"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/comments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="28dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="28dp"
+                    android:text="Comments: "
+                    android:textColor="@color/secondary"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/upload_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="28dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="28dp"
+                    android:text="Date: "
+                    android:textColor="@color/secondary"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/image_size"
@@ -226,7 +248,18 @@
                     android:layout_marginEnd="28dp"
                     android:text="Size: "
                     android:textColor="@color/secondary"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="28dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="28dp"
+                    android:text="Author: "
+                    android:textColor="@color/secondary"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/subreddit"
@@ -239,7 +272,7 @@
                     android:onClick="launchSearch"
                     android:text="Subreddit: "
                     android:textColor="@color/secondary"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
