Fixes link issue, allows viewing of author page

--- a/app/src/main/res/layout/activity_wall.xml
+++ b/app/src/main/res/layout/activity_wall.xml
@@ -251,6 +251,7 @@
                     android:textSize="18sp" />
 
                 <TextView
+                    android:onClick="launchUser"
                     android:id="@+id/author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
