--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -59,7 +58,7 @@
                     tools:ignore="LabelFor" />
 
                 <Button
-                    android:id="@+id/search_button"
+                    android:id="@+id/searchButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
@@ -86,7 +85,7 @@
                 android:paddingEnd="8dp">
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/hot_chip"
+                    android:id="@+id/hotChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/chip_background"
@@ -97,7 +96,7 @@
                     app:checkedIconEnabled="false" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/new_chip"
+                    android:id="@+id/newChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/chip_background"
@@ -108,7 +107,7 @@
                     app:checkedIconEnabled="false" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/top_chip"
+                    android:id="@+id/topChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/chip_background"
@@ -155,7 +154,7 @@
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
             <ProgressBar
-                android:id="@+id/progressBar"
+                android:id="@+id/bottomLoad"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
