--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -21,7 +21,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/default_load"
+                android:id="@+id/defaultLoad"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
@@ -30,7 +30,7 @@
                 android:textSize="16sp" />
 
             <EditText
-                android:id="@+id/default_edit"
+                android:id="@+id/defaultEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -42,7 +42,7 @@
                 android:padding="8dp" />
 
             <TextView
-                android:id="@+id/pref_res_title"
+                android:id="@+id/prefResTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
@@ -51,14 +51,14 @@
                 android:textSize="16sp" />
 
             <LinearLayout
-                android:id="@+id/res_setting"
+                android:id="@+id/resSetting"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="14dp"
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/width_edit"
+                    android:id="@+id/widthEdit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -81,7 +81,7 @@
                     android:textSize="24sp" />
 
                 <EditText
-                    android:id="@+id/height_edit"
+                    android:id="@+id/heightEdit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -94,7 +94,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/scale_setting"
+                android:id="@+id/scaleSetting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
@@ -109,7 +109,7 @@
 
                 <SeekBar
                     android:theme="@style/ThemeOverlay.AppCompat.DayNight"
-                    android:id="@+id/scale_seek"
+                    android:id="@+id/scaleSeek"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="12dp"
@@ -117,7 +117,7 @@
                     android:max="3" />
 
                 <TextView
-                    android:id="@+id/scale_count"
+                    android:id="@+id/scaleCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -129,7 +129,7 @@
             </LinearLayout>
 
             <Switch
-                android:id="@+id/random_changer"
+                android:id="@+id/randomSwitch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
@@ -140,7 +140,7 @@
                 android:theme="@style/ThemeOverlay.AppCompat.DayNight" />
 
             <TextView
-                android:id="@+id/change_interval"
+                android:id="@+id/changeIntervalTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
@@ -149,12 +149,13 @@
                 android:textSize="16sp" />
 
             <LinearLayout
+                android:id="@+id/randomSeekSection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <SeekBar
-                    android:id="@+id/interval_seek"
+                    android:id="@+id/intervalSeek"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="12dp"
@@ -163,7 +164,7 @@
                     android:theme="@style/ThemeOverlay.AppCompat.DayNight" />
 
                 <TextView
-                    android:id="@+id/interval_count"
+                    android:id="@+id/intervalCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -175,14 +176,14 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/refresh_location_setting"
+                android:id="@+id/refreshLocationSetting"
                 android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/random_location"
+                    android:id="@+id/randomLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -193,7 +194,7 @@
                     android:textSize="16sp" />
 
                 <Button
-                    android:id="@+id/random_location_button"
+                    android:id="@+id/randomLocationButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="12dp"
@@ -206,7 +207,7 @@
             </LinearLayout>
 
             <Switch
-                android:id="@+id/gif_switch"
+                android:id="@+id/gifSwitch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
@@ -218,7 +219,7 @@
 
 
             <Switch
-                android:id="@+id/download_origin"
+                android:id="@+id/downloadOrigin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
@@ -229,7 +230,7 @@
                 android:theme="@style/ThemeOverlay.AppCompat.DayNight" />
 
             <Switch
-                android:id="@+id/dark_switch"
+                android:id="@+id/darkSwitch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
