--- a/app/src/main/res/layout/activity_wall.xml
+++ b/app/src/main/res/layout/activity_wall.xml
@@ -7,15 +7,15 @@
     tools:context=".activities.WallActivity">
 
     <ProgressBar
-        android:id="@+id/load_more"
+        android:id="@+id/loadMore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone" />
 
     <ImageView
-        android:id="@+id/wall_holder"
-        android:layout_width="match_parent"
+        android:id="@+id/wallHolder"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
@@ -73,7 +73,7 @@
             android:text="Set Wallpaper"
             android:textColor="@android:color/white" />-->
     <Button
-        android:id="@+id/expand_button"
+        android:id="@+id/expandButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -89,7 +89,7 @@
         android:textColor="@color/textColor" />
 
     <LinearLayout
-        android:id="@+id/bottom_sheet"
+        android:id="@+id/bottomSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -102,7 +102,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/collapse_sheet"
+            android:id="@+id/collapseSheet"
             android:layout_marginTop="20dp"
             android:onClick="toggleBottom"
             android:src="@drawable/ic_down" />
@@ -117,7 +117,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/post_title"
+                    android:id="@+id/postTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -230,7 +230,7 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/upload_date"
+                    android:id="@+id/uploadDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
@@ -241,7 +241,7 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/image_size"
+                    android:id="@+id/imageSize"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
