--- a/app/src/main/res/drawable/ic_android.xml
+++ b/app/src/main/res/drawable/ic_android.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
-    android:tint="@color/textColor"
+    android:width="200px"
+    android:height="200px"
+    android:tint="@color/colorPrimary"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
