--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -31,7 +31,13 @@
 
     <item
         android:id="@+id/saved_subs"
-        android:orderInCategory="10"
+        android:orderInCategory="20"
         android:title="Saved Subs"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/subreddits"
+        android:orderInCategory="10"
+        android:title="Subreddits"
         app:showAsAction="never" />
 </menu>
