Fixes a bug where going back to main caused query to reset

--- a/app/src/main/res/layout/sub_card.xml
+++ b/app/src/main/res/layout/sub_card.xml
@@ -21,6 +21,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:scaleType="centerCrop"
                 android:id="@+id/subIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
